# libarea-old

./: .gitignore  CMakeLists.txt  README  readme  test.py
debian/: .gitignore  changelog  control
debian/patches/: libarea_01_use_cmake.diff  series
kurve/: geometry.h
